# Arcade

./: .gitignore  .pre-commit-config.yaml  .prettierrc  Makefile  README.md  launcher.py  launcher.state.json  launcher_ipc.py  launcher_motion.py  launcher_theme.py  launcher_widgets.py  package-lock.json  pyproject.toml  todo_patch.py  todo_patch2.py  verify_models.py
.github/: pull_request_template.md
.github/workflows/: build-agent-linux.yml  build-agent-mac.yml  ci.yml  security.yml
agent/: .env.example  config.example.json  electron-builder.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json
agent/scripts/: copy-renderer-assets.mjs
agent/tests/: client.test.ts  commands.test.ts  enroll.test.ts  master-pin.test.ts  platform.test.ts
alembic/: env.py
backend/: __init__.py  alembic.ini  arch01_app.py  main.py  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/api/: __init__.py  deps.py
backend/core/: __init__.py  bootstrap.py  config.py  database.py  db_bootstrap.py  feature_flags.py  lan_discovery.py  scheduler.py  security.py  startup.py  ws_manager.py
backend/licensing/: __init__.py  fingerprint.py  public_key.py  verify.py
backend/models/: __init__.py  _enums.py  _types.py  audit_log.py  device_type.py  event.py  event_match.py  event_participant.py  expense.py  invoice.py  invoice_line_item.py  license_status.py  member.py  menu_item.py  package.py  package_entitlement.py  peak_schedule.py  print_job.py  promotion.py  reservation.py  restock_log.py  seat.py  session.py  session_pos_item.py  settings.py  shift.py  staff.py  staff_zone.py  voucher.py  wallet_transaction.py  zone.py
docs/: Arcade_SDD.md  Arcade_SRS.md  CONTRIBUTING.md  Folder_Structure.md  PRODUCT_BRIEF.md  TODO.md  agent-broadcast-overlay-design.md  agent-broadcast-overlay-plan.md  agent-kiosk-verification.md  agent-setup.md  api-reference.md  architecture.md  deployment.md  developer-guide.md  launcher-ui-redesign-design.md  launcher-ui-redesign-plan.md  operator-guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
tests/: test_launcher_ipc.py
tools/: __init__.py
(+617 files in other folders)
