[project]
name = "arcade-backend"
version = "0.0.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py313"
# Exclude validation spikes (frozen ARCH-* artifacts) and the venv.
extend-exclude = ["backend/tests/validation_tasks", "backend/venv", "backend/arch01_app.py", "backend/arch01_stress_test.py", "alembic/versions"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, UP pyupgrade, B bugbear, S bandit
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# Validation spikes and tests may use asserts, large literals, etc.
"backend/tests/**" = ["S101", "S105", "S106", "S104", "S110"]
"backend/tests/validation_tasks/**" = ["S101", "S106", "E501", "S311"]
"launcher.py" = ["S104", "S603"]
"tests/launcher/**" = ["S101", "S105", "S106", "S104", "S110"]
"launcher_ipc.py" = ["S101"]
"tests/test_launcher_ipc.py" = ["S101"]
# keygen GUI + signer tests may use asserts
"tools/keygen/**/test_*.py" = ["S101"]
# Runtime value comes from arcade.config.json, not hardcoded

[tool.black]
line-length = 88
target-version = ["py313"]
# Exclude validation spikes (frozen ARCH-* artifacts) and the venv.
extend-exclude = "backend/(venv|tests/validation_tasks|arch01_app\\.py|arch01_stress_test\\.py)|alembic/versions"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = "(venv|tests/|arch01_)"
plugins = ["pydantic.mypy"]
# Phase 0 has no typed source yet; allow untyped third-party stubs.
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
# validation_tasks/ holds early-project spike tests (arch01–arch06) that are
# no longer relevant. arch06 flips the event-loop policy to Proactor mid-suite
# (see its conftest), which conflicts with the Selector-based aiosqlite setup
# mandated in backend/tests/conftest.py and crashes the whole-suite run with a
# native access-violation/GC stack-overflow. They can still be run on demand
# via `pytest backend/tests/validation_tasks/`.
addopts = "--ignore=backend/tests/validation_tasks"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
